PROJECT (BatchMakeModule)

# Disable MSVC 8 warnings
IF(WIN32)
  OPTION(DISABLE_MSVC8_DEPRECATED_WARNINGS "Disable Visual Studio 8 deprecated warnings" ON)
  MARK_AS_ADVANCED(FORCE DISABLE_MSVC8_DEPRECATED_WARNINGS)  
  IF(DISABLE_MSVC8_DEPRECATED_WARNINGS)
    ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE)
  ENDIF(DISABLE_MSVC8_DEPRECATED_WARNINGS)
ENDIF(WIN32)

# Find BatchMake
FIND_PACKAGE( BatchMake REQUIRED )
INCLUDE( ${BatchMake_USE_FILE} )

# Find GenerateCLP
FIND_PACKAGE(GenerateCLP REQUIRED)
INCLUDE(${GenerateCLP_SOURCE_DIR}/UseGenerateCLP.cmake)

SET ( BatchMakeModule_SOURCE 
BatchMakeModule.cxx
)

GENERATECLP(BatchMakeModule_SOURCE BatchMakeModule.xml ${BatchMakeModule_SOURCE_DIR}/logo.h)

ADD_EXECUTABLE ( BatchMakeModule ${BatchMakeModule_SOURCE})
TARGET_LINK_LIBRARIES(BatchMakeModule BatchMakeLib FLU)