PROJECT (GaussianBlurModule)

# Disable MSVC 8 warnings
IF(WIN32)
  OPTION(DISABLE_MSVC8_DEPRECATED_WARNINGS "Disable Visual Studio 8 deprecated warnings" ON)
  MARK_AS_ADVANCED(FORCE DISABLE_MSVC8_DEPRECATED_WARNINGS)  
  IF(DISABLE_MSVC8_DEPRECATED_WARNINGS)
    ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE)
  ENDIF(DISABLE_MSVC8_DEPRECATED_WARNINGS)
ENDIF(WIN32)

# Find VTK
FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${USE_VTK_FILE})


# Find ITK
FIND_PACKAGE(ITK REQUIRED)
INCLUDE(${USE_ITK_FILE})

# Find GenerateCLP
FIND_PACKAGE(GenerateCLP REQUIRED)
INCLUDE(${GenerateCLP_SOURCE_DIR}/UseGenerateCLP.cmake)

SET ( GaussianBlurModule_SOURCE 
GaussianBlurModule.cxx
)

INCLUDE(${GaussianBlurModule_SOURCE_DIR}/UseSlicer3Module.cmake)

GENERATECLP(GaussianBlurModule_SOURCE GaussianBlurModule.xml)

ADD_EXECUTABLE(GaussianBlurModule ${GaussianBlurModule_SOURCE})
#SET_TARGET_PROPERTIES (GaussianBlurModule PROPERTIES COMPILE_FLAGS "-Dmain=ModuleEntryPoint")
TARGET_LINK_LIBRARIES(GaussianBlurModule ITKIO)